--- a/src/pages/project.module.css
+++ b/src/pages/project.module.css
@@ -1,8 +1,11 @@
 .cards-container {
     display: grid;
     width: 100%;
-    height: 50vh;
     grid-template-columns: 1fr 1fr 1fr;
+}
+
+.cards-container > a {
+    height: 50vh;
 }
 
 .large-title {
