Added Project: DS3, updated landing header, added favicon, updated projects

--- a/src/templates/components/carousel.module.css
+++ b/src/templates/components/carousel.module.css
@@ -2,6 +2,7 @@
     cursor: pointer;
     width: 100%;
     margin-bottom: 10vh;
+    transition: 0.25s ease-in-out;
 }
 
 .carousel-container > div {
