--- a/src/pages/indexComponents/LandingHeader.module.css
+++ b/src/pages/indexComponents/LandingHeader.module.css
@@ -106,7 +106,7 @@
     display: flex;
     width: 100%;
     height: 100%;
-    filter: brightness(0.5);
+    filter: brightness(0.4);
 }
 
 .carousel-caption-container {
@@ -123,9 +123,10 @@
     padding-right: 10%;
     align-items: flex-end;
     flex-direction: column;
+    max-width: 70%;
 }
 
-.carousel-text h1 {
+.carousel-caption h1 {
     text-align: right;
     letter-spacing: 6px;
 }
