--- a/src/pages/indexComponents/expertise.module.css
+++ b/src/pages/indexComponents/expertise.module.css
@@ -43,6 +43,7 @@
 .img-overlay > div {
     padding: 10%;
     width: 80%;
+    height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
