--- a/src/templates/components/ProjectStatisticsStyles.module.css
+++ b/src/templates/components/ProjectStatisticsStyles.module.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
     padding: 2vh;
     border-bottom: 1px solid #636363;
 }
